# backend

./: .pre-commit-config.yaml  Dockerfile  README.md  api_docs.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: deploy_backend.yml  tests.yml
ansible/: deploy.yml
ansible/group_vars/: all.yaml  stage.yaml
ansible/templates/: docker-compose.yml.j2  env.j2
app/: conftest.py
app/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/accounts/fixtures/: accounts.yaml  countries.yaml  departments.yaml
app/accounts/migrations/: 0001_initial.py  0002_trainee_profile.py  0003_add_user_roles.py  0004_remove_education_end_date_and_more.py  0005_traineeprofile_birth_date_traineeprofile_sex.py  0005_user_age_user_gender.py  0006_department.py  0006_remove_user_age_remove_user_gender.py  0007_merge_20230520_1306.py  0007_user_department.py  0008_traineeprofile_status.py  0009_alter_traineeprofile_status.py  0009_traineeprofile_cv_score_traineeprofile_test_score.py  0010_alter_education_degree.py  0011_traineeprofile_career_school_password_and_more.py  0012_rename_status_traineeprofile_test_status.py
app/accounts/tests/: conftest.py
app/attendance/: admin.py  excel_exporter.py  filters.py  models.py  report_template.xlsx  serializers.py  urls.py  views.py
app/attendance/migrations/: 0001_initial.py  (+1 more)
app/attendance/tests/: conftest.py
app/backend/: settings.py  urls.py
app/internship/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
app/statistic/: serializers.py  urls.py  views.py
(+39 files in other folders)
